添加文档内容

--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,6 @@
 <body>
     <h3>koa-qrcode</h3>
 
-    <!-- http://localhost:9527/qrcode?data=https://m.591.com.tw&size=150&margin=4 -->
+    <h4>欢迎使用 koa-qrcode, 如有问题请反馈至: <a href="https://github.com/yuxiaolei1989/koa-qrcode/issues" target="_blank">koa-qrcode issues</a></h4>
 </body>
 </html>
